--- a/SignaturePadSample/SignaturePadSample/MainPage.xaml
+++ b/SignaturePadSample/SignaturePadSample/MainPage.xaml
@@ -5,11 +5,11 @@
              xmlns:signaturePad="clr-namespace:Syncfusion.Maui.SignaturePad;assembly=Syncfusion.Maui.SignaturePad">
 
     <StackLayout Spacing="20" VerticalOptions="Center">
-        <Frame HeightRequest="300" WidthRequest="400">
+        <Border HeightRequest="300" WidthRequest="400">
             <signaturePad:SfSignaturePad x:Name="signaturePad" 
                                          StrokeColor="GreenYellow" 
                                          Background="White" />
-        </Frame>
+        </Border>
         <Button Text="Save" Clicked="Button_Clicked"/>
     </StackLayout>
 
